# ai-shield-platform

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts  vitest.config.ts
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_multi_assessment.py  0003_assessment_catalog.py  0004_user_password.py  0005_connections.py  0006_scan_execution.py
backend/app/: main.py
backend/app/assessment_engines/: __init__.py  base.py  dummy.py  registry.py
backend/app/assessment_payloads/: __init__.py  hallucination.py  jailbreak.py  leakage.py  pii.py  prompt_injection.py  types.py  validation.py
backend/app/assessment_sdk/: __init__.py  configuration.py  evidence.py  exceptions.py  finding.py  http_client.py  metadata.py  parser.py  prompt_templates.py  recommendation.py  result.py  scoring.py  severity.py  utils.py  validators.py
backend/app/auth/: __init__.py  dependencies.py  password.py  revocation.py  service.py  tokens.py
backend/app/common/: __init__.py  dependencies.py  enums.py  exceptions.py  pagination.py  responses.py  types.py
backend/app/connectors/: __init__.py  base.py  http_utils.py  sdk.py  (+5 more)
backend/tests/: conftest.py  test_architecture_assessments.py  test_architecture_e2e.py  test_assessment_sdk.py  test_auth.py  test_connections.py  test_health.py  test_orchestration.py  test_production_readiness.py  test_projects.py  test_report_pdf.py  test_reports_dashboard.py  test_scans.py  test_universal_assessments.py
(+134 files in other folders)
