[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-shield-backend"
version = "0.1.0"
description = "AI Shield — enterprise AI security platform backend"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "AI Shield" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "pwdlib[argon2]>=0.2.1",
    "PyJWT[crypto]>=2.9.0",
    "httpx>=0.28.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
